Implement(all): 통합 테스트 및 버그 수정