@@ -4,17 +4,15 @@ import com.sparta.newsfeed.comment.dto.CommentRequestDto;
 import com.sparta.newsfeed.comment.dto.CommentResponseDto;
 import com.sparta.newsfeed.common.exception.comment.NoPrivilegesException;
 import com.sparta.newsfeed.common.exception.comment.NotFoundCommentException;
-import com.sparta.newsfeed.common.exception.comment.NotFoundPostException;
+import com.sparta.newsfeed.common.exception.post.NotFoundPostException;
 import com.sparta.newsfeed.post.Post;
 import com.sparta.newsfeed.post.PostRepository;
 import com.sparta.newsfeed.user.User;
-import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,51 +21,35 @@ public class CommentService {
 	private final CommentRepository commentRepository;
 	private final PostRepository postRepository;
 
-	@Valid
 	@Transactional
 	public CommentResponseDto createComment(CommentRequestDto dto, User user, Post post) {
-
 		Comment comment = new Comment(dto, user, post);
 		Comment savedComment = commentRepository.save(comment);
-
 		return new CommentResponseDto(savedComment);
 	}
 	
 	public List<CommentResponseDto> getCommentsByPost(Long postId) {
-
-		List<Comment> comments = commentRepository
-				.findByPostId(postId);
-
-		return comments.stream().map(CommentResponseDto::new)
-				.collect(Collectors.toList());
+		List<Comment> comments = commentRepository.findByPostId(postId);
+		return comments.stream().map(CommentResponseDto::new).toList();
 	}
 
 	@Transactional
-	public CommentResponseDto updateComment(Long commentId
-			, CommentRequestDto commentRequestDto
-			, User user) {
-
-		Comment comment = commentRepository.findById(commentId)
-				.orElseThrow(NotFoundCommentException::new);
+	public CommentResponseDto updateComment(Long commentId, CommentRequestDto commentRequestDto, User user) {
+		Comment comment = commentRepository.findById(commentId).orElseThrow(NotFoundCommentException::new);
 		checkUser(comment, user);
 		comment.update(commentRequestDto);
-
 		return new CommentResponseDto(comment);
 	}
 
 	@Transactional
 	public void deleteComment(Long commentId, User user) {
-
-		Comment comment = commentRepository.findById(commentId)
-				.orElseThrow(NotFoundCommentException::new);
+		Comment comment = commentRepository.findById(commentId).orElseThrow(NotFoundCommentException::new);
 		checkUser(comment, user);
 		commentRepository.delete(comment);
 	}
 
 	public Post findPostById(Long postId) {
-
-		return postRepository.findById(postId)
-				.orElseThrow(NotFoundPostException::new);
+		return postRepository.findById(postId).orElseThrow(NotFoundPostException::new);
 	}
 
 	private void checkUser(Comment comment, User user) {
@@ -75,5 +57,4 @@ public class CommentService {
 			throw new NoPrivilegesException();
 		}
 	}
-
 }
